--- a/src/themes/appletv/theme.scss
+++ b/src/themes/appletv/theme.scss
@@ -470,7 +470,7 @@ a[data-role=button] {
 }
 
 .playstatebutton-icon-played {
-    color: #c33;
+    color: #ffc107;
 }
 
 .buttonActive {
