--- a/src/themes/blueradiance/theme.scss
+++ b/src/themes/blueradiance/theme.scss
@@ -464,7 +464,7 @@ a[data-role=button] {
 }
 
 .playstatebutton-icon-played {
-    color: #c33;
+    color: #ffc107;
 }
 
 .buttonActive {
