--- a/src/themes/purplehaze/theme.scss
+++ b/src/themes/purplehaze/theme.scss
@@ -561,7 +561,7 @@ a[data-role=button] {
 }
 
 .playstatebutton-icon-played {
-    color: #c33;
+    color: #ffc107;
 }
 
 .buttonActive {
