--- a/src/themes/wmc/theme.scss
+++ b/src/themes/wmc/theme.scss
@@ -443,7 +443,7 @@ a[data-role=button] {
 }
 
 .playstatebutton-icon-played {
-    color: #c33;
+    color: #ffc107;
 }
 
 .buttonActive {
